# tinyswords

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: temp.scn.ron
assets/scenes/: pathing_error_1..scn.ron  temp.scn.ron  test1..scn.ron  test2..scn.ron  test3..scn.ron  test_map..scn.ron
assets/shaders/: water.wgsl
src/: building.rs  camera.rs  characters.rs  diagnostics.rs  editor.rs  flowfield.rs  game.rs  lib.rs  main.rs  nav.rs  terrain.rs  ui.rs  unit.rs  world.rs
