[package]
name = "tinyswords"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.1"
bevy_asset_loader = { version = "0.20.0", features = ["2d"] }
rand_core = "0.6"
bevy_rand = "0.5"
bevy_prng = { version = "0.5", features = ["rand_chacha", "wyrand"] }
image = "0.25.1"
bevy_egui = "0.27.0"
iyes_perf_ui = "0.2.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
