[package]
name = "tinyswords"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.1"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
rand_core = "0.6"
bevy_rand = "0.11.0"
bevy_prng = { version = "0.11", features = ["rand_chacha", "wyrand"] }
image = "0.25.1"
bevy_egui = "0.35.1"
petgraph = "0.7.1"
rfd = "0.15.4"
anyhow = "^1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
